# papers-fetcher

./: README.md  get_papers_list.py  pyproject.toml  results.csv
.github/workflows/: workflow.yml
papers_fetcher/: fetch.py  utils.py
